- Fixed bug #45765 (ReflectionObject with default parameters of self::xxx cause an error)